Addressing residual deprecations